# media-player-app

./: README.md  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/accounts/: login.html  register.html  welcome.html
myproject/: settings.py  urls.py
