[tool.poetry]
name = "media-player-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
django = "^5.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
