[tool.poetry]
name = "media-player-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-allauth = "^65.3.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
django = "^5.1.4"
pytest = "^8.3.4"
jwt = "^1.3.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
